Minor config changes

--- a/web/index_template.html
+++ b/web/index_template.html
@@ -61,7 +61,7 @@ a {
 <body>
 
 <div class="page">
-	<h1>SQL injections vulnerabilities in Stack Overflow PHP questions</h1>
+	<h1>Potential SQL injections vulnerabilities in Stack Overflow PHP questions</h1>
 
 	<div>
 		<canvas id="injections-per-month-chart"></canvas>
